@@ -5,7 +5,7 @@ use strict;
 use warnings;
 use Test::More;
 
-plan tests => 92;
+plan tests => 94;
 
 use Math::GComplex qw(:overload acos cosh pown powm);
 
@@ -129,14 +129,14 @@ use Math::GComplex qw(:overload acos cosh pown powm);
     is(powm(2 + i, 43,     43 + 3 * i), 39 + 44 * i);
 }
 
-is(join(' ', Math::GComplex::invmod(42,           2017)->reals),    '-48 0');
+is(join(' ', Math::GComplex::invmod(42,           2017)->reals),    '1969 0');
 is(join(' ', Math::GComplex::invmod(3 + 4 * i,    2017)->reals),    '1291 968');
 is(join(' ', Math::GComplex::invmod(91 + 23 * i,  2017)->reals),    '590 405');
-is(join(' ', Math::GComplex::invmod(43 + 99 * i,  1234567)->reals), '-215016 -567265');
+is(join(' ', Math::GComplex::invmod(43 + 99 * i,  1234567)->reals), '1019551 667302');
 is(join(' ', Math::GComplex::invmod(43 + 415 * i, 103)->reals),     '88 25');
 
-# TODO: fix this
-#is(join(' ', Math::GComplex::gcd(135-14*i, 155+34*i)->reals), '5 12');
+is(join(' ', Math::GComplex::gcd(135 - 14 * i, 155 + 34 * i)->reals), '5 12');
+is(join(' ', Math::GComplex::gcd(155 + 34 * i, 135 - 14 * i)->reals), '5 12');
 
 {
     my $m = 2019;
