@@ -2,6 +2,7 @@ Revision history for Math-GComplex
 
 0.12    2019-??-??
 
+        - Added the `round(z)` method to round `z` to the nearest Gaussian integer.
         - Added the `gcd(a, b)` method for computing the greatest common divisors of two complex numbers.
         - Added the `invmod(n, m)` method for computing the modular multiplicative inverse of two complex numbers.
         - Added the `powm(x, n, m)` method for efficiently computing `x**n % m`, using the exponentiation by squaring method.
